PHL-308: Adding sentiment analysis. Removing document analysis.