@@ -1,7 +1,7 @@
 /*
  *     Copyright 2023 Philterd, LLC @ https://www.philterd.ai
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
+ * Licensed under the Apache License, Version 2.0 (the "License", attributes);
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
@@ -29,7 +29,7 @@ import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class IdentifierFilterTest extends AbstractFilterTest {
 
@@ -41,7 +41,7 @@ public class IdentifierFilterTest extends AbstractFilterTest {
     public void filterId1() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new IdentifierFilterStrategy()))
+                .withStrategies(List.of(new IdentifierFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new AlphanumericAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -49,7 +49,7 @@ public class IdentifierFilterTest extends AbstractFilterTest {
 
         final IdentifierFilter filter = new IdentifierFilter(filterConfiguration, "name", Identifier.DEFAULT_IDENTIFIER_REGEX, true, 0);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the id is AB4736021 in california.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the id is AB4736021 in california.", attributes);
 
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 10,19, FilterType.IDENTIFIER));
@@ -61,7 +61,7 @@ public class IdentifierFilterTest extends AbstractFilterTest {
     public void filterId2() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new IdentifierFilterStrategy()))
+                .withStrategies(List.of(new IdentifierFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new AlphanumericAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -69,7 +69,7 @@ public class IdentifierFilterTest extends AbstractFilterTest {
 
         final IdentifierFilter filter = new IdentifierFilter(filterConfiguration, "name", Identifier.DEFAULT_IDENTIFIER_REGEX, true, 0);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the id is AB473-6021 in california.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the id is AB473-6021 in california.", attributes);
 
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 10,20, FilterType.IDENTIFIER));
@@ -80,7 +80,7 @@ public class IdentifierFilterTest extends AbstractFilterTest {
     public void filterId3() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new IdentifierFilterStrategy()))
+                .withStrategies(List.of(new IdentifierFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new AlphanumericAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -88,7 +88,7 @@ public class IdentifierFilterTest extends AbstractFilterTest {
 
         final IdentifierFilter filter = new IdentifierFilter(filterConfiguration, "name", Identifier.DEFAULT_IDENTIFIER_REGEX, true, 0);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the id is 473-6AB021 in california.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the id is 473-6AB021 in california.", attributes);
 
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 10,20, FilterType.IDENTIFIER));
@@ -99,7 +99,7 @@ public class IdentifierFilterTest extends AbstractFilterTest {
     public void filterId4() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new IdentifierFilterStrategy()))
+                .withStrategies(List.of(new IdentifierFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new AlphanumericAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -107,7 +107,7 @@ public class IdentifierFilterTest extends AbstractFilterTest {
 
         final IdentifierFilter filter = new IdentifierFilter(filterConfiguration, "name", Identifier.DEFAULT_IDENTIFIER_REGEX, true, 0);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the id is AB473-6021 in california.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the id is AB473-6021 in california.", attributes);
 
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 10,20, FilterType.IDENTIFIER));
@@ -118,7 +118,7 @@ public class IdentifierFilterTest extends AbstractFilterTest {
     public void filterId5() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new IdentifierFilterStrategy()))
+                .withStrategies(List.of(new IdentifierFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new AlphanumericAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -126,7 +126,7 @@ public class IdentifierFilterTest extends AbstractFilterTest {
 
         final IdentifierFilter filter = new IdentifierFilter(filterConfiguration, "name", Identifier.DEFAULT_IDENTIFIER_REGEX, true, 0);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the id is 473-6AB021 in california.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the id is 473-6AB021 in california.", attributes);
 
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 10,20, FilterType.IDENTIFIER));
@@ -137,7 +137,7 @@ public class IdentifierFilterTest extends AbstractFilterTest {
     public void filterId6() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new IdentifierFilterStrategy()))
+                .withStrategies(List.of(new IdentifierFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new AlphanumericAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -145,7 +145,7 @@ public class IdentifierFilterTest extends AbstractFilterTest {
 
         final IdentifierFilter filter = new IdentifierFilter(filterConfiguration, "name", Identifier.DEFAULT_IDENTIFIER_REGEX, true, 0);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the id is 123-45-6789 in california.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the id is 123-45-6789 in california.", attributes);
 
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 10,21, FilterType.IDENTIFIER));
@@ -156,7 +156,7 @@ public class IdentifierFilterTest extends AbstractFilterTest {
     public void filterId7() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new IdentifierFilterStrategy()))
+                .withStrategies(List.of(new IdentifierFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new AlphanumericAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -164,7 +164,7 @@ public class IdentifierFilterTest extends AbstractFilterTest {
 
         final IdentifierFilter filter = new IdentifierFilter(filterConfiguration, "name", Identifier.DEFAULT_IDENTIFIER_REGEX, true, 0);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "George Washington was president and his ssn was 123-45-6789 and he lived at 90210. Patient id 00076A and 93821A. He is on biotin. Diagnosed with A01000.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "George Washington was president and his ssn was 123-45-6789 and he lived at 90210. Patient id 00076A and 93821A. He is on biotin. Diagnosed with A01000.", attributes);
 
         Assertions.assertEquals(4, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 48, 59, FilterType.IDENTIFIER));
@@ -178,7 +178,7 @@ public class IdentifierFilterTest extends AbstractFilterTest {
     public void filterId8() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new IdentifierFilterStrategy()))
+                .withStrategies(List.of(new IdentifierFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new AlphanumericAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -186,7 +186,7 @@ public class IdentifierFilterTest extends AbstractFilterTest {
 
         final IdentifierFilter filter = new IdentifierFilter(filterConfiguration, "name", Identifier.DEFAULT_IDENTIFIER_REGEX, true, 0);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the id is 000-00-00-00 ABC123 in california.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the id is 000-00-00-00 ABC123 in california.", attributes);
 
         Assertions.assertEquals(2, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 10, 22, FilterType.IDENTIFIER));
@@ -198,7 +198,7 @@ public class IdentifierFilterTest extends AbstractFilterTest {
     public void filterId9() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new IdentifierFilterStrategy()))
+                .withStrategies(List.of(new IdentifierFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new AlphanumericAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -206,7 +206,7 @@ public class IdentifierFilterTest extends AbstractFilterTest {
 
         final IdentifierFilter filter = new IdentifierFilter(filterConfiguration, "name", Identifier.DEFAULT_IDENTIFIER_REGEX, true, 0);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the id is AZ12 ABC1234/123ABC4 in california.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the id is AZ12 ABC1234/123ABC4 in california.", attributes);
 
         Assertions.assertEquals(2, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 15, 22, FilterType.IDENTIFIER));
@@ -218,7 +218,7 @@ public class IdentifierFilterTest extends AbstractFilterTest {
     public void filterId10() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new IdentifierFilterStrategy()))
+                .withStrategies(List.of(new IdentifierFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new AlphanumericAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -226,7 +226,7 @@ public class IdentifierFilterTest extends AbstractFilterTest {
 
         final IdentifierFilter filter = new IdentifierFilter(filterConfiguration, "name", Identifier.DEFAULT_IDENTIFIER_REGEX, true, 0);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the id is H3SNPUHYEE7JD3H in california.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the id is H3SNPUHYEE7JD3H in california.", attributes);
 
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 10,25, FilterType.IDENTIFIER));
@@ -237,7 +237,7 @@ public class IdentifierFilterTest extends AbstractFilterTest {
     public void filterId11() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new IdentifierFilterStrategy()))
+                .withStrategies(List.of(new IdentifierFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new AlphanumericAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -245,7 +245,7 @@ public class IdentifierFilterTest extends AbstractFilterTest {
 
         final IdentifierFilter filter = new IdentifierFilter(filterConfiguration, "name", Identifier.DEFAULT_IDENTIFIER_REGEX, true, 0);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the id is 86637729 in california.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the id is 86637729 in california.", attributes);
 
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 10,18, FilterType.IDENTIFIER));
@@ -256,7 +256,7 @@ public class IdentifierFilterTest extends AbstractFilterTest {
     public void filterId12() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new IdentifierFilterStrategy()))
+                .withStrategies(List.of(new IdentifierFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new AlphanumericAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -264,7 +264,7 @@ public class IdentifierFilterTest extends AbstractFilterTest {
 
         final IdentifierFilter filter = new IdentifierFilter(filterConfiguration, "name", Identifier.DEFAULT_IDENTIFIER_REGEX, true, 0);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the id is 33778376 in california.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the id is 33778376 in california.", attributes);
 
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 10,18, FilterType.IDENTIFIER));
@@ -275,7 +275,7 @@ public class IdentifierFilterTest extends AbstractFilterTest {
     public void filterId13() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new IdentifierFilterStrategy()))
+                .withStrategies(List.of(new IdentifierFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new AlphanumericAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -283,7 +283,7 @@ public class IdentifierFilterTest extends AbstractFilterTest {
 
         final IdentifierFilter filter = new IdentifierFilter(filterConfiguration, "name", "\\b[A-Z]{4,}\\b", true, 0);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the id is ABCD.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the id is ABCD.", attributes);
 
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 10,14, FilterType.IDENTIFIER));
@@ -294,7 +294,7 @@ public class IdentifierFilterTest extends AbstractFilterTest {
     public void filterId14() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new IdentifierFilterStrategy()))
+                .withStrategies(List.of(new IdentifierFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new AlphanumericAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -302,7 +302,7 @@ public class IdentifierFilterTest extends AbstractFilterTest {
 
         final IdentifierFilter filter = new IdentifierFilter(filterConfiguration, "name", Identifier.DEFAULT_IDENTIFIER_REGEX, true, 0);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the id is 123456.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the id is 123456.", attributes);
 
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 10,16, FilterType.IDENTIFIER));
@@ -313,7 +313,7 @@ public class IdentifierFilterTest extends AbstractFilterTest {
     public void filterId15() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new IdentifierFilterStrategy()))
+                .withStrategies(List.of(new IdentifierFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new AlphanumericAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -321,7 +321,7 @@ public class IdentifierFilterTest extends AbstractFilterTest {
 
         final IdentifierFilter filter = new IdentifierFilter(filterConfiguration, "name", Identifier.DEFAULT_IDENTIFIER_REGEX, true, 0);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "John Smith, patient ID A203493, was seen on February 18.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "John Smith, patient ID A203493, was seen on February 18.", attributes);
 
         showSpans(filterResult.getSpans());
         Assertions.assertEquals(1, filterResult.getSpans().size());
@@ -333,7 +333,7 @@ public class IdentifierFilterTest extends AbstractFilterTest {
     public void filterId16() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new IdentifierFilterStrategy()))
+                .withStrategies(List.of(new IdentifierFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new AlphanumericAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -341,7 +341,7 @@ public class IdentifierFilterTest extends AbstractFilterTest {
 
         final IdentifierFilter filter = new IdentifierFilter(filterConfiguration, "name", "\\b\\d{3,8}\\b", false, 0);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "The ID is 123456.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "The ID is 123456.", attributes);
 
         showSpans(filterResult.getSpans());
         Assertions.assertEquals(1, filterResult.getSpans().size());
@@ -353,7 +353,7 @@ public class IdentifierFilterTest extends AbstractFilterTest {
     public void filterId17() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new IdentifierFilterStrategy()))
+                .withStrategies(List.of(new IdentifierFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new AlphanumericAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -361,7 +361,7 @@ public class IdentifierFilterTest extends AbstractFilterTest {
 
         final IdentifierFilter filter = new IdentifierFilter(filterConfiguration, "name", "(?i)([^Application Name])(.*)$", false, 0);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "Application Name John Smith");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "Application Name John Smith", attributes);
 
         showSpans(filterResult.getSpans());
         Assertions.assertEquals(1, filterResult.getSpans().size());
