@@ -1,7 +1,7 @@
 /*
  *     Copyright 2023 Philterd, LLC @ https://www.philterd.ai
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
+ * Licensed under the Apache License, Version 2.0 (the "License", attributes);
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
@@ -33,8 +33,8 @@ import org.junit.jupiter.api.condition.DisabledOnOs;
 import org.mockito.Mockito;
 
 import java.io.File;
-import java.util.Arrays;
 import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
 
 import static org.junit.jupiter.api.condition.OS.MAC;
@@ -52,7 +52,7 @@ public class PersonsV2FilterTest extends AbstractFilterTest {
     public void filter1() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new PersonsFilterStrategy()))
+                .withStrategies(List.of(new PersonsFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new PersonsAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -71,7 +71,7 @@ public class PersonsV2FilterTest extends AbstractFilterTest {
                 metricsService,
                 thresholds);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "George Washington was president.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "George Washington was president.", attributes);
 
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 0, 17, FilterType.PERSON));
@@ -85,7 +85,7 @@ public class PersonsV2FilterTest extends AbstractFilterTest {
     public void filter2() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new PersonsFilterStrategy()))
+                .withStrategies(List.of(new PersonsFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new PersonsAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -104,7 +104,7 @@ public class PersonsV2FilterTest extends AbstractFilterTest {
                 metricsService,
                 thresholds);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "George Washington was president and his ssn was 123-45-6789 and he lived at 90210. The name 456 should be filtered. Jeff Smith should be ignored.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "George Washington was president and his ssn was 123-45-6789 and he lived at 90210. The name 456 should be filtered. Jeff Smith should be ignored.", attributes);
 
         showSpans(filterResult.getSpans());
 
@@ -125,7 +125,7 @@ public class PersonsV2FilterTest extends AbstractFilterTest {
     public void filter3() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new PersonsFilterStrategy()))
+                .withStrategies(List.of(new PersonsFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new PersonsAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -146,7 +146,7 @@ public class PersonsV2FilterTest extends AbstractFilterTest {
 
         final String input = "In recent days, healthcare facilities across the nation have again begun to buckle under spiking infection rates. Last week, some local hospitals temporarily postponed scheduled surgeries that require an inpatient stay following an operation, and the trauma center at Harbor-UCLA Medical Center closed for hours because of a blood shortage - a step it hadn't taken in over three decades. A staff shortage at some local ambulance companies further complicated the situation.The virus has spread so fast since the arrival of the Omicron variant that it could take just about a week for California to tally a million new cases. It was only on Jan. 10 that California surpassed 6 million total reported coronavirus cases in the nearly two years since the start of the pandemic, according to data released by state health officials. Even during last winter's surge, it took three weeks to accumulate a million new cases, with the state peaking at 46,000 new infections a day. \"On this national holiday where we celebrate the life and legacy of Dr. Martin Luther King, we remember his deep commitment to health equity,\" said L.A. County Public Health Director Barbara Ferrer Ferrer. \"As Reverend King memorably said, \"Of all the forms of inequality, injustice in health is the most shocking and the most inhuman because it often results in physical death.\"";
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, input);
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, input, attributes);
 
         showSpans(filterResult.getSpans());
 
@@ -163,7 +163,7 @@ public class PersonsV2FilterTest extends AbstractFilterTest {
     public void filter4() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new PersonsFilterStrategy()))
+                .withStrategies(List.of(new PersonsFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new PersonsAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -184,7 +184,7 @@ public class PersonsV2FilterTest extends AbstractFilterTest {
 
         final String input = "IN THE UNITED STATES DISTRICT COURT \nEASTERN DISTRICT OF ARKANSAS \nWESTERN DIVISION \nJAMES EDWARD SMITH, \nafk/a James Edward Bridges, \nADC#103093 \nv. No. 4:14-cv-455-DPM \nPLAINTIFF \nCHARLES A. SMITH; \nMARY ANN CONLEY, \nafk/a Mary Ann Smith; and \nROBERT CASTILLOW DEFENDANTS \nORDER \nJames Smith's prose complaint must be dismissed without prejudice. \nHe hasn't paid the filing fee, moved to proceed in forma pauperis, or provided \nproof of service on any defendant. FED. R. CIV. P. 4(I); Local Rule 5.5(c)(2). \nSo Ordered. \nD.P. Marshall Jr. \nUnited States District Judge \nCase 4:14-cv-00455-DPM   Document 2   Filed 12/09/14   Page 1 of 1\n";
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, input);
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, input, attributes);
 
         showSpans(filterResult.getSpans());
 
@@ -197,7 +197,7 @@ public class PersonsV2FilterTest extends AbstractFilterTest {
     public void filter5() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new PersonsFilterStrategy()))
+                .withStrategies(List.of(new PersonsFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new PersonsAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -218,7 +218,7 @@ public class PersonsV2FilterTest extends AbstractFilterTest {
 
         final String input = "Plaintiff, Wendy J. Christophersen, trustee in the estate of the above-named debtor, complains of Defendant and shows the court as follows:";
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, input);
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, input, attributes);
 
         showSpans(filterResult.getSpans());
 
@@ -233,7 +233,7 @@ public class PersonsV2FilterTest extends AbstractFilterTest {
     public void filter6() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new PersonsFilterStrategy()))
+                .withStrategies(List.of(new PersonsFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new PersonsAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -254,7 +254,7 @@ public class PersonsV2FilterTest extends AbstractFilterTest {
 
         final String input = "Plaintiff, Wendy J. Christophersen, trustee in the estate of the above-named debtor,";
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, input);
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, input, attributes);
 
         showSpans(filterResult.getSpans());
 
