@@ -1,7 +1,7 @@
 /*
  *     Copyright 2023 Philterd, LLC @ https://www.philterd.ai
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
+ * Licensed under the Apache License, Version 2.0 (the "License", attributes);
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
@@ -27,7 +27,7 @@ import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class ZipCodeFilterTest extends AbstractFilterTest {
 
@@ -37,7 +37,7 @@ public class ZipCodeFilterTest extends AbstractFilterTest {
     public void filterZipCode1() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new ZipCodeFilterStrategy()))
+                .withStrategies(List.of(new ZipCodeFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new ZipCodeAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -45,7 +45,7 @@ public class ZipCodeFilterTest extends AbstractFilterTest {
 
         final ZipCodeFilter filter = new ZipCodeFilter(filterConfiguration, true);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the zip is 90210.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the zip is 90210.", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 11, 16, FilterType.ZIP_CODE));
         Assertions.assertEquals("90210", filterResult.getSpans().get(0).getText());
@@ -56,7 +56,7 @@ public class ZipCodeFilterTest extends AbstractFilterTest {
     public void filterZipCode2() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new ZipCodeFilterStrategy()))
+                .withStrategies(List.of(new ZipCodeFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new ZipCodeAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -64,7 +64,7 @@ public class ZipCodeFilterTest extends AbstractFilterTest {
 
         final ZipCodeFilter filter = new ZipCodeFilter(filterConfiguration, true);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the zip is 90210abd.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the zip is 90210abd.", attributes);
         Assertions.assertEquals(0, filterResult.getSpans().size());
 
     }
@@ -73,7 +73,7 @@ public class ZipCodeFilterTest extends AbstractFilterTest {
     public void filterZipCode3() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new ZipCodeFilterStrategy()))
+                .withStrategies(List.of(new ZipCodeFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new ZipCodeAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -81,7 +81,7 @@ public class ZipCodeFilterTest extends AbstractFilterTest {
 
         final ZipCodeFilter filter = new ZipCodeFilter(filterConfiguration, true);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the zip is 90210 in california.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the zip is 90210 in california.", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 11, 16, FilterType.ZIP_CODE));
 
@@ -91,7 +91,7 @@ public class ZipCodeFilterTest extends AbstractFilterTest {
     public void filterZipCode4() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new ZipCodeFilterStrategy()))
+                .withStrategies(List.of(new ZipCodeFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new ZipCodeAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -99,7 +99,7 @@ public class ZipCodeFilterTest extends AbstractFilterTest {
 
         final ZipCodeFilter filter = new ZipCodeFilter(filterConfiguration, true);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the zip is 85055 in california.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the zip is 85055 in california.", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 11, 16, FilterType.ZIP_CODE));
 
@@ -109,7 +109,7 @@ public class ZipCodeFilterTest extends AbstractFilterTest {
     public void filterZipCode5() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new ZipCodeFilterStrategy()))
+                .withStrategies(List.of(new ZipCodeFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new ZipCodeAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -117,7 +117,7 @@ public class ZipCodeFilterTest extends AbstractFilterTest {
 
         final ZipCodeFilter filter = new ZipCodeFilter(filterConfiguration, true);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the zip is 90213-1544 in california.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "the zip is 90213-1544 in california.", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 11, 21, FilterType.ZIP_CODE));
 
@@ -127,7 +127,7 @@ public class ZipCodeFilterTest extends AbstractFilterTest {
     public void filterZipCode6() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new ZipCodeFilterStrategy()))
+                .withStrategies(List.of(new ZipCodeFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new ZipCodeAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -135,7 +135,7 @@ public class ZipCodeFilterTest extends AbstractFilterTest {
 
         final ZipCodeFilter filter = new ZipCodeFilter(filterConfiguration, true);
 
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "George Washington was president and his ssn was 123-45-6789 and he lived in 90210.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "George Washington was president and his ssn was 123-45-6789 and he lived in 90210.", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
         Assertions.assertTrue(checkSpan(filterResult.getSpans().get(0), 76, 81, FilterType.ZIP_CODE));
 
@@ -145,7 +145,7 @@ public class ZipCodeFilterTest extends AbstractFilterTest {
     public void filterZipCode7() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new ZipCodeFilterStrategy()))
+                .withStrategies(List.of(new ZipCodeFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new ZipCodeAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -154,7 +154,7 @@ public class ZipCodeFilterTest extends AbstractFilterTest {
         final ZipCodeFilter filter = new ZipCodeFilter(filterConfiguration, true);
 
         // Tests whole word only.
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "George Washington was president and his ssn was 123-45-6789 and he lived in 9021032.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "George Washington was president and his ssn was 123-45-6789 and he lived in 9021032.", attributes);
         Assertions.assertEquals(0, filterResult.getSpans().size());
 
     }
@@ -163,7 +163,7 @@ public class ZipCodeFilterTest extends AbstractFilterTest {
     public void filterZipCode8() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new ZipCodeFilterStrategy()))
+                .withStrategies(List.of(new ZipCodeFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new ZipCodeAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -172,7 +172,7 @@ public class ZipCodeFilterTest extends AbstractFilterTest {
         final ZipCodeFilter filter = new ZipCodeFilter(filterConfiguration, true);
 
         // Tests whole word only.
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "George Washington was president and his ssn was 123-45-6789 and he lived in 90210-1234.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "George Washington was president and his ssn was 123-45-6789 and he lived in 90210-1234.", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
 
     }
@@ -181,7 +181,7 @@ public class ZipCodeFilterTest extends AbstractFilterTest {
     public void filterZipCode9() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new ZipCodeFilterStrategy()))
+                .withStrategies(List.of(new ZipCodeFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new ZipCodeAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -190,7 +190,7 @@ public class ZipCodeFilterTest extends AbstractFilterTest {
         final ZipCodeFilter filter = new ZipCodeFilter(filterConfiguration, false);
 
         // Tests without delimiter.
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "George Washington was president and his ssn was 123-45-6789 and he lived in 902101234.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "George Washington was president and his ssn was 123-45-6789 and he lived in 902101234.", attributes);
         Assertions.assertEquals(1, filterResult.getSpans().size());
 
     }
@@ -199,7 +199,7 @@ public class ZipCodeFilterTest extends AbstractFilterTest {
     public void filterZipCode10() throws Exception {
 
         final FilterConfiguration filterConfiguration = new FilterConfiguration.FilterConfigurationBuilder()
-                .withStrategies(Arrays.asList(new ZipCodeFilterStrategy()))
+                .withStrategies(List.of(new ZipCodeFilterStrategy()))
                 .withAlertService(alertService)
                 .withAnonymizationService(new ZipCodeAnonymizationService(new LocalAnonymizationCacheService()))
                 .withWindowSize(windowSize)
@@ -208,7 +208,7 @@ public class ZipCodeFilterTest extends AbstractFilterTest {
         final ZipCodeFilter filter = new ZipCodeFilter(filterConfiguration, true);
 
         // Tests without delimiter.
-        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "George Washington was president and his ssn was 123-45-6789 and he lived in 902101234.");
+        final FilterResult filterResult = filter.filter(getPolicy(), "context", "documentid", PIECE, "George Washington was president and his ssn was 123-45-6789 and he lived in 902101234.", attributes);
         Assertions.assertEquals(0, filterResult.getSpans().size());
 
     }
